--- a/public/index.html
+++ b/public/index.html
@@ -116,7 +116,7 @@
 </head>
 <body>
 <h1>Ar Drone NodeJs Demo</h1>
-<h4>Built using nodejs, socket.io, node-ar-drone and dronestream - By Rohit Ghatol</h4>
+<h4>Built using nodejs, socket.io, node-ar-drone and dronestream - By Harshit Pandey</h4>
 <table>
     <tr>
         <td >
